[CSS Regions] ::before and ::after pseudo-elements are not displayed for regions https://bugs.webkit.org/show_bug.cgi?id=80163

Source/WebCore:

When the implementation of the before/after was moved to the DOM, before/after generated
content stoppped to work with css regions. The problem happens when:
1. RenderRegion can not have children and when the PseudoElement::attach tries to create a renderer for the
generated content, it fails.
2. RenderRegion::canHaveGeneratedChildren should not be false because regions can have generated content.

Reviewed by David Hyatt.

Tests: fast/regions/region-dynamic-after-before.html
       fast/regions/region-generated-content-before-after.html

* dom/NodeRenderingContext.cpp:
(WebCore::NodeRenderingContext::shouldCreateRenderer):
* rendering/RenderRegion.h:

LayoutTests:

Add two simple tests verifying if region works with before/after generated content.

Reviewed by David Hyatt.

* fast/regions/region-dynamic-after-before.html: Added.
* fast/regions/region-generated-content-before-after.html: Added.
* platform/mac/fast/regions/region-dynamic-after-before-expected.png: Added.
* platform/mac/fast/regions/region-dynamic-after-before-expected.txt: Added.
* platform/mac/fast/regions/region-generated-content-before-after-expected.png: Added.
* platform/mac/fast/regions/region-generated-content-before-after-expected.txt: Added.


Canonical link: https://commits.webkit.org/135846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151647 268f45cc-cd09-0410-ab3c-d52691b4dbfc