Source/WebCore/rendering/RenderRegion.h
@@ -147,6 +147,7 @@ private:
 
     virtual bool canHaveChildren() const OVERRIDE { return false; }
     virtual bool canDOMChildrenHaveRenderParent() const OVERRIDE { return true; }
+    virtual bool canHaveGeneratedChildren() const OVERRIDE { return true; }
 
     virtual void insertedIntoTree() OVERRIDE;
     virtual void willBeRemovedFromTree() OVERRIDE;
